@@ -6,6 +6,7 @@ This file documents the major additions and syntax changes between releases.
 	  (IPv4 only).
 	check_dns: allow for IPv6 RDNS
 	check_dns: allow unsorted addresses
+	check_dns: allow forcing complete match of all addresses
 	check_apt: add --only-critical switch
 	check_apt: add -l/--list option to print packages
 
